--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,28 +1,46 @@
 .btn {
-  padding: 12px 24px;
-  color: aliceblue;
-  background-color: rgb(199, 21, 21);
-  border-radius: 24px;
-  border: none;
-  margin-top: 16px;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1px; /* 157.143% */
+  letter-spacing: -0.408px;
+  padding: 14px 40px;
+  justify-content: center;
+  align-items: center;
   margin-left: auto;
+  border-radius: 100px;
+  background: #df2929;
+  border: none;
 }
 
 .item {
   display: flex;
-  justify-content: center;
+  text-align: left;
+  padding: 9px 0;
 
-  margin-top: 20px;
-  border-radius: 24px;
-  border: solid 1px rgb(11, 26, 68);
-  padding: 4px 10px;
+  border-bottom: solid 1px #cacaca;
 }
 
 .name {
-  font-size: 28px;
+  color: #000;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -0.32px;
+
+  margin-bottom: 8px;
 }
 
 .tel {
-  font-size: 16px;
-  color: rgb(35, 154, 209);
+  color: #000;
+  font-family: Inter;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.26px;
 }
