--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -3,7 +3,20 @@
 }
 
 .input {
-  border-radius: 16px;
-  border: solid 1px rgb(65, 111, 236);
-  height: 28px;
+  height: 36px;
+  width: 100%;
+  border-radius: 10px;
+  background: #e8e8e8;
+  color: #3d3434;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+  border: none;
+}
+
+.filter {
+  margin-bottom: 19px;
 }
