--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -1,13 +1,12 @@
-.title {
+.label {
   color: #6b6b6b;
   font-feature-settings: 'case' on;
-  font-family: Inter;
-  font-size: 16px;
+  font-family: Roboto;
+  font-size: 10px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; /* 137.5% */
+  line-height: 22px; /* 220% */
   letter-spacing: -0.408px;
-  margin-bottom: 15px;
 }
 
 .input {
@@ -22,24 +21,34 @@
   line-height: 22px; /* 129.412% */
   letter-spacing: -0.408px;
   border: none;
-  margin-bottom: 11px;
 }
 
-.btn {
+.form {
+  margin-bottom: 40px;
+  width: 276px;
+}
+.formBtn {
+  display: block;
+  cursor: pointer;
+  border-radius: 100px;
+  background: #007aff;
   color: #fff;
   font-family: Roboto;
-  font-size: 20px;
+  font-size: 17px;
   font-style: normal;
   font-weight: 500;
-  line-height: 22px; /* 157.143% */
+  line-height: 22px; /* 129.412% */
   letter-spacing: -0.408px;
-  padding: 14px 40px;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  border-radius: 100px;
-  background: #04c400;
   border: none;
 
-  margin-top: 18px;
+  padding: 14px 40px;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.formThumb {
+  width: 276px;
+  margin-left: auto;
+  margin-right: auto;
 }
