--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 375px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 20px;
 }
 
 code {
@@ -33,4 +37,9 @@ a {
 }
 .active {
   color: rgb(54, 96, 212);
+}
+
+button {
+  padding: 0;
+  margin: 0;
 }
